# HMAC_encryption

./: HMAC_encoding_test-explained.ipynb  HMAC_encoding_test.ipynb  HMAC_english_test.ipynb  README.md  main.py  pyproject.toml  utils.py
