[project]
name = "hmac-addresses"
version = "0.1.0"
description = "Privacy-preserving Chinese address matching using HMAC-SHA256 and BERT-based parsing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addressparser>=0.2.4",
    "hanlp>=2.1.3",
    "ipykernel>=7.2.0",
    "torch>=2.10.0",
    "transformers<4.55",
]
